force-app/main/default/objects/GenericGatewayLog__c/GenericGatewayLog__c.object-meta.xml
<CustomObject>
    <label>Generic Gateway Log</label>
    <nameField>
        <displayFormat>GE{0000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Generic Gateway Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>