force-app/main/default/objects/GenericGatewayLog__c/fields/InteractionType__c.field-meta.xml
<CustomField>
    <fullName>InteractionType__c</fullName>
    <label>Interaction Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>