force-app/main/default/objects/GenericGatewayLog__c/fields/Object_Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>Object_Reference_Id__c</fullName>
    <description>Captures the object reference Id</description>
    <inlineHelpText>Captures the object reference Id</inlineHelpText>
    <label>Object Reference Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>