force-app/main/default/objects/GenericGatewayLog__c/fields/ResultCode__c.field-meta.xml
<CustomField>
    <fullName>ResultCode__c</fullName>
    <label>Result Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>